# overflow-proof

./: Cargo.toml  README.md
src/: base_checked_ops.rs  lib.rs
